--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@perawallet/connect": "^0.2.3",
+    "@randlabs/myalgo-connect": "^1.3.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.3.1",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
