--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,16 @@
 {
-  "printWidth": 200,
+  "printWidth": 80,
   "tabWidth": 2,
-  "trailingComma": "all",
+  "useTabs": false,
   "semi": true,
-  "arrowParens": "avoid",
+  "singleQuote": false,
+  "quoteProps": "as-needed",
+  "jsxSingleQuote": false,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens": "always",
+  "endOfLine": "lf",
   "importOrder": ["^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
